# chessterm

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: board.rs  engine.rs  game.rs  macros.rs  main.rs  moves.rs  parser.rs
src/engine/: board.rs  game.rs  moves.rs  parser.rs
src/ui/: app.rs  ui.rs
