[package]
name = "chessterm"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ronaldsuwandi/chessterm"
readme = "README.md"
license = "MIT"
rust-version = "1.80.0"
description = "Terminal based chess engine"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
ratatui-image = "4.2.0"
rodio = "0.20.1"
image = "0.25.5"
include_dir = "0.7"

[lints.rust]
unused_imports = "allow"
